# BibChecker

./: .gitignore  README.md  bibcheck.py  pyproject.toml
.github/metrics/: BibChecker.csv
.github/workflows/: release.yml  traffic.yml
src/bibcheck/: __init__.py  bibliography.py  citation.py  exclusions.json  main.py  parse.py  utils.py  validate.py  write_output.py
src/bibcheck/validation/: crossref.py
